[package]
name = "serde_json_lodash"
version = "0.1.0"
authors = ["up9cloud <8325632+up9cloud@users.noreply.github.com>"]
description = "serde_json::Value with lodash.js spec"
keywords = ["serde", "serde_json", "json", "lodash"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
