[package]
name = "serde_json_lodash"
version = "0.1.5"
authors = ["up9cloud <8325632+up9cloud@users.noreply.github.com>"]
description = "lodash.js ported version, work with serde_json::Value"
keywords = ["serde", "serde_json", "json", "lodash"]
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "criterion"
harness = false
