[package]
name = "serde_json_lodash"
version = "0.1.8"
authors = ["up9cloud <8325632+up9cloud@users.noreply.github.com>"]
description = "lodash.js ported version, work with serde_json::Value"
keywords = ["serde", "serde_json", "json", "lodash"]
license-file = "LICENSE"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# wait for this PR: https://github.com/dtolnay/paste/pull/62
# default = ["camel"]
camel = ["paste"]

[dependencies]
serde_json = "1"
paste = { version = "1", optional = true }

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "criterion"
harness = false
